2004-08-16  Naba Kumar  <naba@gnome.org>
	
	* anjuta.prj: Updated.
	
	* pixmaps/Makefile.am, plugins/build-basic-autotools/Makefile.am,
	plugins/devhelp/Makefile.am, plugins/editor/Makefile.am,
	plugins/file-loader/Makefile.am, plugins/file-manager/Makefile.am,
	plugins/file-wizard/Makefile.am, plugins/message-view/Makefile.am,
	plugins/profile-default/Makefile.am, plugins/sample1/Makefile.am,
	plugins/terminal/Makefile.am, src/Makefile.am: Fixed makefile
	syntax errors.

2004-08-16  Naba Kumar  <naba@gnome.org>

	* configure.in, src/layout.xml,
	plugins/profile-default/plugin.c,
	libanjuta/interfaces/libanjuta.idl,
	plugins/Makefile.am, (added) plugins/gtodo/*: Added Todo plugin.
	
	* configure.in, plugins/Makefile.am,
	plugins/project-manager/.cvsignore, 
	plugins/project-manager/Makefile.am,
	plugins/project-manager/anjuta-project-manager-plugin.png,
	plugins/project-manager/anjuta-project-manager.plugin.in,
	plugins/project-manager/anjuta-project-manager.ui,
	plugins/project-manager/plugin.c,
	plugins/project-manager/plugin.h: Added project manager plugin
	based on gnome-build.
	
	* Makefile.am, mime/Makefile.am, mime/anjuta.applications,
	mime/anjuta.keys, mime/anjuta.mime: Added anjuta files mime types.
	
	* manuals/reference/libanjuta/tmpl/e-splash.sgml,
	manuals/reference/libanjuta/tmpl/libanjuta-unused.sgml,
	manuals/reference/libanjuta/tmpl/properties.sgml: Updated.
    
2004-08-16  Naba Kumar  <naba@gnome.org>

	* plugins/editor/action-callbacks.c: Fixed compile error.
	
2004-08-15  Naba Kumar  <naba@gnome.org>

	* plugins/devhelp/plugin.[c,h]: Fixed a start-up warning.
	
	* libanjuta/e-splash.c, plugins/profile-default/plugin.c:
	New improved splace with nicer progress.
	
	* configure.in, plugins/Makefile.am,
	(added) file-wizard/.cvsignore,
	(added) file-wizard/Makefile.am,
	(added) file-wizard/action-callbacks.c,
	(added) file-wizard/action-callbacks.h,
	(added) file-wizard/anjuta-file-wizard-plugin.png,
	(added) file-wizard/anjuta-file-wizard.glade,